Sun Mar 05 11:16:46 2006  Wallace Zhang  <zhangw@ociweb.com>

        * CIAO version 0.5 released.

Thu Mar  2 17:50:36 UTC 2006  Boris Kolpackov  <boris@kolpackov.net>

        * CCF/CCF/IDL2/SemanticGraph/Struct.cpp:
        * CCF/CCF/IDL2/SemanticGraph/Union.cpp:

          Fixed a bug in the logic that determines completeness of recursive
          structs and unions.

Thu Mar  2 08:49:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeApplication/Container_Impl.cpp:
          Replaced NULL with 0

Thu Mar  2 01:33:09 UTC 2006  Wallace Zhang  <zhangw@ociweb.com>

        * NEWS:

          Updated this file with info from Ming Xiong and Gan Deng.

Wed Mar  1 22:34:52 UTC 2006  Wallace Zhang  <zhangw@ociweb.com>

        * NEWS:

          Updated the file with info from Ming Xiong.

Wed Mar  1 19:34:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO-INSTALL.html:
          Updated rename of CIAOTAO.mwc to CIAO_TAO.mwc

Wed Mar  1 15:02:10 UTC 2006  xiong,ming  <ming.xiong@vanderbilt.edu>

        * DAnCE/NodeApplication/Container_Impl.h
        * DAnCE/NodeApplication/Container_Impl.cpp

        Added codes to unregister with naming service when removing
        components

Tue Feb 28 18:46:42 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Deployment.xsd
        * DAnCE/Deployment.xsd.orig
        * DAnCE/XMI.xsd
        * DAnCE/XMI.xsd.orig

          Removed these schema files.  They were misleading and useless.

Fri Feb 24 21:21:02 UTC 2006  xiong,ming  <ming.xiong@vanderbilt.edu>

        * tools/Config_Handlers/Config_Handlers.mpc

          Added a verbatim to disable hidden_visibility for Config_Handlers

Fri Feb 24 18:54:52 UTC 2006  Stoyan Paunov  <spaunov@isis.vanderbilt.edu>

        * DAnCE/RepositoryManager/HTTP_Handler.cpp:
        * DAnCE/RepositoryManager/RM_Helper.h:
        * DAnCE/RepositoryManager/RM_Helper.cpp:
        * DAnCE/RepositoryManager/RepositoryManager_Impl.cpp: