@@ -8,11 +8,6 @@
 
 #include "BenchmarkS.h"
 
-#if defined (_MSC_VER)
-# pragma warning(push)
-# pragma warning (disable:4250)
-#endif /* _MSC_VER */
-
 /// Implement the Test::LatencyTest interface
 class LatencyTest
 : public virtual POA_Benchmark::LatencyTest
@@ -31,13 +26,9 @@ class LatencyTest
 
  private:
   /// Use an ORB reference to conver strings to objects and shutdown
-    /// the application.
-    CORBA::ORB_var orb_;
+  /// the application.
+  CORBA::ORB_var orb_;
 };
-
-#if defined(_MSC_VER)
-# pragma warning(pop)
-#endif /* _MSC_VER */
 
 #include /**/ "ace/post.h"
 #endif /* LATENCYTEST_H */
