@@ -1,3 +1,8 @@
+Mon Mar 06 16:16:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Swapping_Container.{h,cpp}:
+          Made serial_number_ unsigned and documented why it is static
+
 Sun Mar 05 11:16:46 2006  Wallace Zhang  <zhangw@ociweb.com>
 
         * CIAO version 0.5 released.
